# ai-screen-code

./: .env.example  .gitignore  CLAUDE.md  DEPLOY.md  README.md  SPEC.md  deploy-ssl.sh  docker-compose.yml  generate-ssl.sh
.github/workflows/: CLAUDE.md  ci.yml  pages.yml
.specify/memory/: constitution.md
backend/: CLAUDE.md  Cargo.toml  Dockerfile  config.yaml
backend/src/: config.rs  database.rs  error.rs  lib.rs  main.rs  middleware.rs  state.rs
backend/src/handlers/: auth.rs  generate.rs  history.rs  mod.rs  models.rs  settings.rs  subscription.rs
backend/src/models/: history.rs  mod.rs  request.rs  response.rs  subscription.rs  user.rs  verification_code.rs
backend/src/services/: ai_service.rs  douyin_oauth.rs  email_service.rs  glm_service.rs  history_service.rs  kimi_service.rs  minimax_service.rs  mod.rs  oauth.rs  payment_service.rs  qq_oauth.rs  qwen_service.rs  wechat_oauth.rs
backend/tests/: auth_handler_test.rs  glm_service_test.rs  history_service_test.rs  kimi_service_test.rs  minimax_service_test.rs  payment_service_test.rs  qwen_service_test.rs  subscription_flow_test.rs  subscription_handler_test.rs  subscription_model_test.rs
deploy/: README.md  build-and-push.sh  deploy.sh  kubernetes.yml
docs/: PRD.md  ROADMAP.md  TECHNICAL.md  UI-DESIGN.md  api.md  configuration.md  deployment.md  development.md
docs/plans/: 2026-02-28-payment-subscription-test-plan.md  2026-02-28-payment-subscription-test-report.md
frontend/: CLAUDE.md  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts
frontend/public/wasm/: image_wasm.d.ts  image_wasm.js  package.json
frontend/src/: App.tsx  index.css  router.tsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src/api/: auth.ts  client.ts
frontend/src/api/__mocks__/: client.ts
frontend/src/components/common/: Button.tsx  Card.tsx  ErrorBoundary.tsx  Input.tsx  Modal.tsx  Select.tsx  Spinner.tsx  WindowControls.tsx  index.ts
frontend/src/components/editor/: CodeEditor.tsx  CodePreview.tsx  index.ts
frontend/src/components/home/: DeveloperCard.tsx  ServiceCard.tsx  ServiceGrid.tsx  SubscriptionBanner.tsx  ToolPanel.tsx  TrustSection.tsx  index.ts
frontend/src/components/layout/: Footer.tsx  Header.tsx  Layout.tsx
frontend/src/components/tools/: CompressTool.tsx  PortraitTool.tsx  WatermarkTool.tsx  index.ts
frontend/src/components/upload/: ImagePreviewModal.tsx  ImageUpload.tsx  index.ts
frontend/src/data/: services.ts
frontend/src/pages/: CardsPage.tsx  ForgotPasswordPage.tsx  GeneratePage.tsx  HistoryPage.tsx  HomePage.tsx  ImageToolsPage.tsx  LoginPage.tsx  OAuthCallbackPage.tsx  OrdersPage.tsx  PaymentPage.test.tsx  PaymentPage.tsx  PreviewPage.tsx  PrivacyPage.tsx  ProfilePage.tsx  RegisterPage.tsx  SettingsPage.tsx  SubscribePage.test.tsx  SubscribePage.tsx  TermsPage.tsx  index.ts
frontend/src/stores/: useAppStore.ts
frontend/src/types/: api.ts  image-tools.ts  image-wasm.ts  services.ts
frontend/src/utils/: imageProcessor.ts  runtime.ts
image-wasm/: API_CONTRACT.md  Cargo.toml
image-wasm/pkg/: image_wasm_bg.wasm.d.ts
image-wasm/src/: compress.rs  error.rs  io.rs  lib.rs  portrait.rs  types.rs  watermark.rs
image-wasm/src/webp_sys/: mod.rs
image-wasm/tests/: apng_convert_test.rs  compress_level_test.rs  format_convert_test.rs  portrait_bg_test.rs  portrait_size_test.rs  watermark_position_test.rs  watermark_rotation_test.rs  webp_lossy_test.rs
specs/001-update-homepage-image-processing/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-update-homepage-image-processing/checklists/: requirements.md
