[package]
name = "ai-screen-code"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Utilities
base64 = "0.22"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
async-trait = "0.1"
dotenv = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Image processing
image = "0.25"
tempfile = "3"

# Validation
validator = { version = "0.16", features = ["derive"] }

# Config
config = "0.14"

# Authentication
bcrypt = "0.15"
jsonwebtoken = "9"
once_cell = "1"

# Database (using SQLite)
rusqlite = { version = "0.31", features = ["bundled"] }
dirs = "5"

# Email
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "builder", "tokio1-rustls", "rustls-native-certs", "ring"] }
rustls-native-certs = "0.7"

# Random
rand = "0.8"

# URL encoding
urlencoding = "2"
serde_urlencoded = "0.7"

[dev-dependencies]
# Testing
tokio = { version = "1", features = ["full"] }
mockall = "0.12"
http-body-util = "0.1"
axum-test = "15"
tower = "0.4"
mockito = "1.6"

[lib]
name = "ai_screen_code"
path = "src/lib.rs"

[[bin]]
name = "ai-screen-code"
path = "src/main.rs"

[features]
default = ["dev"]
dev = []
prod = []
