[package]
name = "image-wasm"
version = "0.1.0"
edition = "2021"
description = "WASM image processing library for compression, watermark, and portrait photo"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["wasm"]
wasm = ["dep:wasm-bindgen", "dep:serde-wasm-bindgen", "dep:console_error_panic_hook"]

[dependencies]
image = "=0.25.10"
png = "0.17"
ab_glyph = "0.2"
palette = "0.7"
serde = { version = "1.0", features = ["derive"] }
flate2 = "1.0"

# WASM-specific dependencies
wasm-bindgen = { version = "0.2", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = 3
lto = true
